Fixed contract of text/text box (was too low)

--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ PAGE: PORTFOLIO
   margin: 0;
   padding: 5%;
   font-size: 0.75em;
-  color: #bdc3c7;
+  color: #777;
 }
 
 
